changes to intro and layout figure

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -175,10 +175,10 @@ The framework discussed here, incorporates the following three contributions:
         application in the domain of particle accelerators.
 \end{enumerate}
 
-Here, we will focus on a real world application arising from PSI's
-  \textsc{SwissFEL}~\cite{pedr:10} activities, which have an immediate and a
-  long-range impact, by optimizing important parameters of PSI's \textsc{250
-  MeV injector} test facility (and later for the full PSI \textsc{SwissFEL}).
+Here, we will focus on a real world applications arising from Paul Scherrer Institut's (PSI)
+  \textsc{SwissFEL}~\cite{pedr:10} activities, and a high charge photoinjector 
+  at the Argonne Wakefield Accelerator (AWA). Both of which have an immediate and a
+  long-range impact, by optimizing important parameters for rf photoinjectors. 
 
 The next section introduces the notation of multi-objective optimization
   theory and describes the first implemented optimizer.
