--- a/paper/figures/opt-framework-layout.tex
+++ b/paper/figures/opt-framework-layout.tex
@@ -1,3 +1,15 @@
+\begin{pgfonlayer}{background}
+	\path (-2,3.25)+(0,0) node (a) {};
+	\path (0,0)+(7.5,-2.5) node (c) {};
+	
+	\path[fill=white!20,rounded corners, draw=black!50, dashed]
+	(a) rectangle (c);           
+	\path (2.75,2.75)+(-0,0) node (a) {OPAL};
+	
+\end{pgfonlayer}
+
+
+
 \node (optimizers) [draw, text centered,
     text width=6.5em, fill=red, fill opacity=0.1, minimum height=12em,
     rounded corners, very thick, draw=red!60, text opacity=1.0]
