--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -727,6 +727,9 @@ Recently we introduced a reduced envelope model \cite{iabc:12} into
 With access to the \textsc{OPAL} forward solver the framework is able to
   tackle a multitude of optimization problems arising in the domain of
   particle accelerators.
+  The framework is also integrated into \textsc{OPAL} so that users can 
+  define optimization problems within an input file, requiring no 
+  additional knowledge or installation of the API to use it.
 By abiding to the API from Listing 3 it becomes trivial to add new forward
   solvers to the framework (see Appendix A).
 If the objectives and constraints are simple arithmetical expressions, the
