starting to add awa parameters

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -730,6 +730,7 @@ With access to the \textsc{OPAL} forward solver the framework is able to
   The framework is also integrated into \textsc{OPAL} so that users can 
   define optimization problems within an input file, requiring no 
   additional knowledge or installation of the API to use it.
+
 By abiding to the API from Listing 3 it becomes trivial to add new forward
   solvers to the framework (see Appendix A).
 If the objectives and constraints are simple arithmetical expressions, the
@@ -837,7 +838,7 @@ Finally, combining the presented multi-objective optimization framework with
 \section{ACKNOWLEDGMENT}
 
 The authors thank the \textsc{SwissFEL} and AWA teams for contributing to the
-  formulation of optimization problems. We gratefully acknowledge the computing resources provided on Bebop, a high-performance computing cluster operated by the Laboratory Computing Resource Center at Argonne National Laboratory.
+  formulation of optimization problems. We gratefully acknowledge the computing resources provided on Bebop, a HPC cluster operated by the LCRC at ANL.
 \appendix
 
 \section{Forward Solver Implementation}
