--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -48,6 +48,9 @@
 \xdefinecolor{mygreen}{RGB}{0,220,0}
 \xdefinecolor{myblue}{RGB}{26,150,255}
 
+\usepackage{array}
+\newcolumntype{C}{ >{\centering\arraybackslash} m{2.5cm} }
+\newcolumntype{D}{ >{\centering\arraybackslash} m{3cm} }
 
 \begin{document}
 
